--- a/EOSAccountAnalyzer/EOSAccountAnalyzer.csproj
+++ b/EOSAccountAnalyzer/EOSAccountAnalyzer.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.6" />
+    <PackageReference Include="AWSSDK.S3" Version="3.3.20" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="NLog" Version="4.5.7" />
     <PackageReference Include="NLog.Config" Version="4.5.7" />
