--- a/EOSAccountAnalyzer/EOSAccountAnalyzer.csproj
+++ b/EOSAccountAnalyzer/EOSAccountAnalyzer.csproj
@@ -24,6 +24,9 @@
     <None Update="contacts.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="NLog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
