--- a/EOSAccountAnalyzer/NLog.config
+++ b/EOSAccountAnalyzer/NLog.config
@@ -36,11 +36,8 @@
   <rules>
     <!-- add your logging rules here -->
 
-    <!--
-    Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
-    <logger name="*" minlevel="Debug" writeTo="f" />
-    -->
+    
     <logger name="*" minlevel="Info" writeTo="logconsole" />
-    <logger name="*" minlevel="Debug" writeTo="logfile" />
+    <logger name="*" minlevel="Info" writeTo="logfile" />
   </rules>
 </nlog>
