--- a/EOSAccountAnalyzer/Properties/launchSettings.json
+++ b/EOSAccountAnalyzer/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "EOSAccountAnalyzer": {
       "commandName": "Project",
-      "commandLineArgs": "expand -f contacts.txt -ov true -A http://mainnet.eosdocs.io:7001"
+      "commandLineArgs": "expand -f contacts.txt -ov true -A http://api.eosnewyork.io"
     }
   }
 }
