--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "EOSDotNet"]
 	path = EOSDotNet
-	url = git@git-as-eosny:eosnewyork/EOSDotNet.git
+	url = git@github.com:eosnewyork/EOSDotNet.git
