--- a/EOSAccountAnalyzer/Properties/launchSettings.json
+++ b/EOSAccountAnalyzer/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "EOSAccountAnalyzer": {
       "commandName": "Project",
-      "commandLineArgs": "expand -f contacts.txt -o output -ov true -A http://api.eosnewyork.io "
+      "commandLineArgs": "Compare  balances1.csv balances2.csv"
     }
   }
 }
